Fixed overlapping issue

--- a/css/neomorphic.css
+++ b/css/neomorphic.css
@@ -11,7 +11,7 @@
   --bs-cyan: #0dcaf0;
   --bs-white: #fff;
   --bs-black: #000;
-  --bs-gray: #3C3C3C;
+  --bs-gray: #3c3c3c;
   --bs-gray-dark: #343a40;
   --bs-gray-100: #f8f9fa;
   --bs-gray-200: #e9ecef;
@@ -42,10 +42,19 @@
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
   --bs-body-bg-rgb: 255, 255, 255;
-  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-  --bs-body-font-family: Mulish, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
+  --bs-gradient: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0.15),
+    rgba(255, 255, 255, 0)
+  );
+  --bs-body-font-family: Mulish, -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji,
+    Segoe UI Symbol, Noto Color Emoji;
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 500;
   --bs-body-line-height: 1.5;
@@ -62,7 +71,7 @@
   --blur-small2: 8px;
   --color-dark-shadow: var(--bs-gray-900);
   --color-light-shadow: var(--bs-gray-600);
-  --color-transparent: rgba(0,0,0,0);
+  --color-transparent: rgba(0, 0, 0, 0);
   --bg-angle: 45;
 }
 
@@ -86,7 +95,7 @@ a {
 }
 
 .navbar .nav-item .nav-link {
-  border-left: 4px solid rgba(0,0,0,0);
+  border-left: 4px solid rgba(0, 0, 0, 0);
 }
 
 .navbar .nav-item .nav-link:hover {
@@ -102,15 +111,15 @@ a {
   background: var(--bs-gray-800);
   border: none;
   box-shadow: var(--h1) var(--v1) var(--blur-small1) var(--color-dark-shadow),
-              var(--h2) var(--v2) var(--blur-small2) var(--color-light-shadow);
-
+    var(--h2) var(--v2) var(--blur-small2) var(--color-light-shadow);
 }
 
 .btn:hover {
   background: var(--bs-gray-800);
   color: var(--bs-primary);
-  box-shadow: inset var(--h1) var(--v1) var(--blur-small1) var(--color-dark-shadow),
-              inset var(--h2) var(--v2) var(--blur-small2) var(--color-light-shadow);
+  box-shadow: inset var(--h1) var(--v1) var(--blur-small1)
+      var(--color-dark-shadow),
+    inset var(--h2) var(--v2) var(--blur-small2) var(--color-light-shadow);
 }
 
 .card {
@@ -124,22 +133,25 @@ a {
 
 .card-hover:hover {
   box-shadow: inset var(--h1) var(--v1) var(--blur1) var(--color-dark-shadow),
-              inset var(--h2) var(--v2) var(--blur2) var(--color-light-shadow);
+    inset var(--h2) var(--v2) var(--blur2) var(--color-light-shadow);
 }
 
 .card-social {
-  border-radius: 50rem;
+  border-radius: 20rem;
+  margin: 20px auto;
   text-decoration: none;
-  box-shadow: inset var(--h1) var(--v1) var(--blur-small1) var(--color-transparent),
-              inset var(--h2) var(--v2) var(--blur-small2) var(--color-transparent);
+  box-shadow: inset var(--h1) var(--v1) var(--blur-small1)
+      var(--color-transparent),
+    inset var(--h2) var(--v2) var(--blur-small2) var(--color-transparent);
   -webkit-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
 
 .card-social:hover {
   color: var(--bs-primary);
-  box-shadow: inset var(--h1) var(--v1) var(--blur-small1) var(--color-dark-shadow),
-              inset var(--h2) var(--v2) var(--blur-small2) var(--color-light-shadow);
+  box-shadow: inset var(--h1) var(--v1) var(--blur-small1)
+      var(--color-dark-shadow),
+    inset var(--h2) var(--v2) var(--blur-small2) var(--color-light-shadow);
   -webkit-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
@@ -154,7 +166,7 @@ a {
   width: 100%;
   height: 100%;
   box-shadow: var(--h1) var(--v1) var(--blur1) var(--color-dark-shadow),
-              var(--h2) var(--v2) var(--blur2) var(--color-light-shadow);
+    var(--h2) var(--v2) var(--blur2) var(--color-light-shadow);
 }
 
 .card-social::after {
